--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html class="h-100" lang="en">
+<html lang="ru">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="/styles/tailwind.css" rel="stylesheet">
+    <!-- <link href="/styles/tailwind.css" rel="stylesheet"> -->
     <title>SQL Front</title>
   </head>
   <body>
